--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "displayName": "Domain Schematics",
   "description": "Extension for triggering nx domain schematics",
   "version": "0.0.1",
+  "repository": "https://github.com/srlee309/vscode-domain-schematics-extension",
   "engines": {
-    "vscode": "^1.49.0"
+    "vscode": "^1.52.0"
   },
   "categories": [
     "Other"
@@ -231,7 +232,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "package": "vsce package --no-yarn --baseImagesUrl https://github.com/srlee309/vscode-domain-schematics-extension",
+    "package": "vsce package --no-yarn -o domain-schematics.vsix",
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
@@ -248,7 +249,7 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
-    "@types/vscode": "^1.49.0",
+    "@types/vscode": "^1.52.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "babel-jest": "^26.6.3",
