--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "domain-schematics",
   "displayName": "Domain Schematics",
   "description": "Extension for triggering nx domain schematics",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "repository": "https://github.com/srlee309/vscode-domain-schematics-extension",
   "engines": {
     "vscode": "^1.52.0"
@@ -28,7 +28,8 @@
     "onCommand:domain-schematics.ngrxFeature",
     "onCommand:domain-schematics.ngrxSelector",
     "onCommand:domain-schematics.ngrxStore",
-    "onCommand:domain-schematics.ngrxReducer"
+    "onCommand:domain-schematics.ngrxReducer",
+    "onCommand:domain-schematics.addPrivateApi"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -193,6 +194,10 @@
       {
         "command": "domain-schematics.ngrxReducer",
         "title": "Create ngrx reducer"
+      },
+      {
+        "command": "domain-schematics.addPrivateApi",
+        "title": "Add private domain api"
       }
     ],
     "menus": {
@@ -296,6 +301,11 @@
           "command": "domain-schematics.ngrxReducer",
           "group": "4_ngrx@7",
           "when": "resourcePath =~ /libs.*data-access$/ || resourcePath =~ /libs.*data-access[/\\\\]src[/\\\\]lib$/"
+        },
+        {
+          "command": "domain-schematics.addPrivateApi",
+          "group": "4_privateDomainApi@1",
+          "when": "resourcePath =~ /libs.*(?:\\.cypress|data-access|feature|shell|ui|util)$/ || resourcePath =~ /libs.*(?:\\.cypress|data-access|feature|shell|ui|util)[/\\\\]src[/\\\\]lib$/"
         }
       ],
       "commandPalette": [
