--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "domain-schematics",
   "displayName": "Domain Schematics",
   "description": "Extension for triggering nx domain schematics",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "repository": "https://github.com/srlee309/vscode-domain-schematics-extension",
   "engines": {
     "vscode": "^1.53.0"
@@ -305,7 +305,7 @@
         {
           "command": "domain-schematics.addPrivateApi",
           "group": "4_privateDomainApi@1",
-          "when": "resourcePath =~ /libs.*(?:\\.cypress|data-access|feature|shell|ui|util)$/ || resourcePath =~ /libs.*(?:\\.cypress|data-access|feature|shell|ui|util)[/\\\\]src[/\\\\]lib$/"
+          "when": "resourcePath =~ /libs.*(?:data-access|feature|shell|ui|util)$/ || resourcePath =~ /libs.*(?:data-access|feature|shell|ui|util)[/\\\\]src[/\\\\]lib$/"
         }
       ],
       "commandPalette": [
